--- a/webServer-Hapi/package.json
+++ b/webServer-Hapi/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@hapi/hapi": "^21.3.10"
+    "@hapi/hapi": "^21.3.10",
+    "webserver-hapi": "file:"
   }
 }
