--- a/notesApp/package.json
+++ b/notesApp/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "lint": "eslint ."
+    "start": "nodemon ./src/server.js",
+    "lint": "eslint ./src"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +21,8 @@
   },
   "dependencies": {
     "@hapi/hapi": "^21.3.10",
+    "nanoid": "^5.0.7",
+    "newman": "^6.2.1",
     "notesapp": "file:"
   }
 }
